--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -375,6 +375,7 @@ header
 */
 .header-area {
   position: fixed;
+  top: 30px;
   left: 0px;
   right: 0px;
   z-index: 100;
@@ -387,14 +388,12 @@ header
 
 .header-area .main-nav {
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  border-radius: 40px;
   min-height: 80px;
   background: #fff;
 }
 
 .header-area .main-nav .logo {
-  align-items: flex-end;
-  display: flex;
-  min-width: 49px;
   float: left;
   margin-top: 37px;
   -webkit-transition: all 0.3s ease 0s;
@@ -574,17 +573,9 @@ header
   }
 }
 
-.container {
-	max-width: 100%;
-}
-
-.col-12 {
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
 @media (max-width: 991px) {
   .header-area {
+    padding: 0px 15px;
     height: 80px;
     box-shadow: none;
     text-align: center;
@@ -1482,29 +1473,24 @@ footer .social {
 }
 
 footer .social li {
-  vertical-align: top;
   margin: 0px 10px;
   display: inline-block;
 }
 
 footer .social li a {
-  color: #fff;
+  color: #9d5bd9;
    text-align: center;
+  background-color: #fff;
+  width: 36px;
+  height: 36px;
   line-height: 36px;
   border-radius: 50%;
-  display: block;
+  display: inline-block;
   font-size: 16px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-}
-
-footer .social .sub-nav li {
-	text-align: left;
-	color: #fff;
-	font-size: 80%;
-	display: block;
 }
 
 footer .social li a:hover {
@@ -1619,21 +1605,4 @@ preloader
   100% {
     opacity: 0;
   }
-}
-
-.rectangle-32 {
-  background-color: #9c69e2;
-  border-radius: 20px;
-  height: 20px;
-  mix-blend-mode: normal;
-  width: 20px;
-}
-
-.rectangle-33 {
-  background-color: #f063b8;
-  border-radius: 20px;
-  height: 35px;
-  margin-left: 9px;
-  mix-blend-mode: normal;
-  width: 20px;
 }
