--- a/assets/css/order-fulfillment.css
+++ b/assets/css/order-fulfillment.css
@@ -1,27 +1,3 @@
-/*
-
-Softy Pinko
-
-https://templatemo.com/tm-535-softy-pinko
-
-*/
-/* ---------------------------------------------
-Table of contents
-------------------------------------------------
-01. font & reset css
-02. reset
-03. global styles
-04. header
-05. welcome
-06. features
-07. team
-08. pricing
-09. blog
-10. contact
-11. footer
-12. preloader
-
---------------------------------------------- */
 /* 
 ---------------------------------------------
 font & reset css
@@ -30,7 +6,7 @@ font & reset css
 @import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900");
 /* 
 ---------------------------------------------
-reset
+Reset
 --------------------------------------------- 
 */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
@@ -103,7 +79,7 @@ ul {
 
 /* 
 ---------------------------------------------
-global styles
+Global
 --------------------------------------------- 
 */
 html,
@@ -370,7 +346,7 @@ button.main-button:hover {
 
 /* 
 ---------------------------------------------
-header
+Header
 --------------------------------------------- 
 */
 .header-area {
@@ -635,7 +611,7 @@ header
 
 /* 
 ---------------------------------------------
-welcome
+Welcome
 --------------------------------------------- 
 */
 .welcome-area {
@@ -744,13 +720,24 @@ welcome
   }
 }
 
+button {
+  display: block;
+  margin: 0 auto;
+  width: 260px;
+  height: 36px;
+  border-radius: 30px;
+  color: #fff;
+  font-size: 15px;
+  cursor: pointer;
+}
+
 
 /* 
 ---------------------------------------------
-features
+Description
 --------------------------------------------- 
 */
-.features-small-item {
+.description-small-item {
   cursor: pointer;
   display: block;
   background: #FFFFFF;
@@ -768,11 +755,11 @@ features
   margin-bottom: 30px;
 }
 
-.features-small-item:hover .icon {
+.description-small-item:hover .icon {
   background-color: #ff589e;
 }
 
-.features-small-item .icon {
+.description-small-item .icon {
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -789,12 +776,12 @@ features
   border-radius: 50%;
 }
 
-.features-small-item .icon i {
+.description-small-item .icon i {
   font-size: 18px;
   color: #fff;
 }
 
-.features-small-item .features-title {
+.description-small-item .description-title {
   font-weight: 500;
   font-size: 18px;
   color: #1e1e1e;
@@ -804,7 +791,7 @@ features
   z-index: 2;
 }
 
-.features-small-item p {
+.description-small-item p {
   font-weight: 400;
   font-size: 13px;
   color: #777;
@@ -814,7 +801,7 @@ features
   z-index: 2;
 }
 
-.features-small-item a {
+.description-small-item a {
   float: right;
   position: relative;
   z-index: 2;
@@ -837,277 +824,7 @@ features
 
 /* 
 ---------------------------------------------
-parallax & home seperator
---------------------------------------------- 
-*/
-.mini {
-  min-height: 215px;
-  overflow: hidden;
-  position: relative;
-  padding-top: 90px;
-  padding-bottom: 90px;
-}
-
-.mini:before {
-  content: '';
-  position: absolute;
-  width: 140%;
-  height: 140%;
-  opacity: .95;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-image: url(../images/work-process-bg.png);
-  z-index: 2;
-  top: -20%;
-  left: -20%;
-}
-
-.mini .mini-content {
-  position: relative;
-  z-index: 3;
-}
-
-.mini .mini-content .info {
-  text-align: center;
-  color: #fff;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.mini .mini-content .info small {
-  display: block;
-  font-weight: 400;
-  font-size: 13px;
-  margin-bottom: 5px;
-}
-
-.mini .mini-content .info strong {
-  font-weight: 700;
-  font-size: 17px;
-  margin-bottom: 40px;
-  display: block;
-}
-
-.mini .mini-content .info h1 {
-  color: #fff;
-  font-weight: 500;
-  font-size: 28px;
-  letter-spacing: 0.25px;
-  margin-bottom: 30px;
-}
-
-.mini .mini-content .info p {
-  letter-spacing: 1px;
-  margin-bottom: 40px;
-  color: #fff;
-  letter-spacing: 0.25px;
-  line-height: 26px;
-  font-weight: 400;
-  font-size: 15px;
-}
-
-.mini .mini-content .info p span {
-  text-decoration: underline;
-}
-
-.mini .mini-content .mini-box {
-  display: block;
-  background: #fff;
-  padding: 20px;
-  border-radius: 20px;
-  box-shadow: 0 2px 48px 0 rgba(0, 0, 0, 0.08);
-  margin-bottom: 30px;
-  position: relative;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-  text-align: center;
-}
-
-.mini .mini-content .mini-box:hover {
-  margin-top: -10px;
-}
-
-.mini .mini-content .mini-box:before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  background: #fff;
-  width: 100%;
-  opacity: .15;
-  height: 100%;
-  bottom: -10px;
-  left: 0px;
-  right: -20px;
-  margin: auto;
-  border-radius: 20px;
-}
-
-.mini .mini-content .mini-box i {
-  display: block;
-  font-size: 20px;
-  margin-bottom: 15px;
-}
-
-.mini .mini-content .mini-box span {
-  display: block;
-  font-weight: 400;
-  font-size: 14px;
-  color: #777;
-  letter-spacing: .75px;
-}
-
-.mini .mini-content .mini-box strong {
-  display: block;
-  font-weight: 400;
-  font-size: 17px;
-  color: #1e1e1e;
-  letter-spacing: 0.25px;
-  margin-bottom: 5px;
-  margin-top: 20px;
-}
-
-.counter {
-  overflow: hidden;
-  position: relative;
-}
-
-.counter:before {
-  content: '';
-  position: absolute;
-  width: 140%;
-  height: 140%;
-  opacity: .90;
-  background-image: url(../images/fun-facts-bg.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  z-index: 2;
-  top: -20%;
-  left: -20%;
-}
-
-.counter .content {
-  position: relative;
-  z-index: 3;
-  width: 100%;
-}
-
-.counter .content .count-item {
-  height: 340px;
-  position: relative;
-  float: left;
-  width: 100%;
-}
-
-.counter .content .count-item.decoration-bottom {
-  position: relative;
-}
-
-.counter .content .count-item.decoration-bottom:after {
-  content: '';
-  position: absolute;
-  width: 70%;
-  height: 32px;
-  top: 160px;
-  left: 70%;
-  background: url(../images/circle-dec.png) center center no-repeat;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-.counter .content .count-item.decoration-top {
-  position: relative;
-}
-
-.counter .content .count-item.decoration-top:after {
-  content: '';
-  position: absolute;
-  width: 70%;
-  height: 32px;
-  top: 140px;
-  left: 70%;
-  background: url(../images/circle-dec.png) center center no-repeat;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-.counter .content .count-item:hover strong {
-  margin-top: 110px;
-}
-
-.counter .content .count-item strong {
-  display: block;
-  text-align: center;
-  font-weight: 600;
-  font-size: 36px;
-  letter-spacing: 0.25px;
-  margin-bottom: 10px;
-  color: #fff;
-  margin-top: 120px;
-  -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-.counter .content .count-item span {
-  display: block;
-  text-align: center;
-  color: #fff;
-  font-weight: 500;
-  font-size: 17px;
-  letter-spacing: 0.25px;
-}
-
-@media (max-width: 991px) {
-  .parallax {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    min-height: auto;
-  }
-  .parallax .content {
-    position: relative !important;
-    top: 0% !important;
-    transform: perspective(1px) translateY(0%) !important;
-  }
-  .counter {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  .counter .content {
-    position: relative !important;
-    top: 0% !important;
-    transform: perspective(1px) translateY(0%) !important;
-  }
-  .counter .content .count-item {
-    height: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .counter .content .count-item:hover strong {
-    margin-top: 0px;
-  }
-  .counter .content .count-item:before {
-    display: none;
-  }
-  .counter .content .count-item:after {
-    display: none;
-  }
-  .counter .content .count-item strong {
-    margin-top: 0px;
-  }
-}
-
-/* 
----------------------------------------------
-team
+Members
 --------------------------------------------- 
 */
 
@@ -1405,60 +1122,7 @@ Work Area
 
 /* 
 ---------------------------------------------
-contact
---------------------------------------------- 
-*/
-
-#contact-us {
-  padding: 160px 0px;
-}
-
-#contact-us h5 {
-  font-weight: 500;
-  font-size: 18px;
-  color: #1e1e1e;
-  letter-spacing: 0.25px;
-  line-height: 26px;
-}
-
-.contact-text {
-  font-weight: 400;
-  font-size: 14px;
-  color: #6F8BA4;
-  letter-spacing: 0.6px;
-  line-height: 26px;
-}
-
-.contact-text p {
-  margin-bottom: 28px;
-}
-
-.contact-form input,
-.contact-form textarea {
-  color: #777;
-  font-size: 14px;
-  border: 1px solid #eee;
-  width: 100%;
-  height: 50px;
-  outline: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 25px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin-bottom: 30px;
-}
-
-.contact-form textarea {
-  height: 150px;
-  resize: none;
-  padding: 20px;
-}
-
-/* 
----------------------------------------------
-footer
+Footer
 --------------------------------------------- 
 */
 footer {
@@ -1466,18 +1130,18 @@ footer {
   padding-top: 30px;
 }
 
-footer .social {
+footer .link {
   overflow: hidden;
   margin-top: 10px;
   text-align: center;
 }
 
-footer .social li {
+footer .link li {
   margin: 0px 10px;
   display: inline-block;
 }
 
-footer .social li a {
+footer .link li a {
   color: #9d5bd9;
    text-align: center;
   background-color: #fff;
@@ -1493,7 +1157,7 @@ footer .social li a {
   transition: all 0.3s ease 0s;
 }
 
-footer .social li a:hover {
+footer .link li a:hover {
   background-color: #ff589e;
   color: #fff;
 }
@@ -1525,7 +1189,7 @@ footer .copyright {
 
 /* 
 ---------------------------------------------
-preloader
+Preloader
 --------------------------------------------- 
 */
 #preloader {
