--- a/assets/css/order-fulfillment.css
+++ b/assets/css/order-fulfillment.css
@@ -371,7 +371,7 @@ Header
 
 .header-area .main-nav .logo {
   float: left;
-  margin-top: 37px;
+  margin-top: 5px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -524,7 +524,7 @@ Header
 }
 
 .header-area.header-sticky .logo {
-  margin-top: 25px;
+  margin-top: 2px;
 }
 
 .header-area.header-sticky .nav {
@@ -560,7 +560,7 @@ Header
     padding: 0px;
   }
   .header-area .logo {
-    margin-top: 27px !important;
+    margin-top: 2px !important;
     margin-left: 30px;
   }
   .header-area .menu-trigger {
@@ -1137,7 +1137,9 @@ footer .link {
 }
 
 footer .link li {
-  margin: 0px 10px;
+  margin: 0px 15px;
+  margin-left: 15px;
+  margin-right: 10px;
   display: inline-block;
 }
 
