--- a/assets/css/order-fulfillment.css
+++ b/assets/css/order-fulfillment.css
@@ -170,7 +170,7 @@ body {
 .left-text {
   font-weight: 400;
   font-size: 16px;
-  color: #777;
+  color: rgb(100, 100, 100);
   line-height: 28px;
   letter-spacing: 1px;
 }
@@ -187,6 +187,15 @@ body {
   color: #3B566E;
 }
 
+.normal-text {
+  font-weight: 400;
+  font-size: 16px;
+  color: rgb(100, 100, 100);
+  line-height: 28px;
+  letter-spacing: 1px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 .padding-bottom-top-60 {
   padding-top: 60px !important;
   padding-bottom: 60px !important;
