--- a/assets/css/order-fulfillment.css
+++ b/assets/css/order-fulfillment.css
@@ -1,13 +1,13 @@
-/* 
+/*
 ---------------------------------------------
 font & reset css
---------------------------------------------- 
+---------------------------------------------
 */
 @import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900");
-/* 
+/*
 ---------------------------------------------
 Reset
---------------------------------------------- 
+---------------------------------------------
 */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
 pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
@@ -77,10 +77,10 @@ ul {
   margin-bottom: 0px;
 }
 
-/* 
+/*
 ---------------------------------------------
 Global
---------------------------------------------- 
+---------------------------------------------
 */
 html,
 body {
@@ -353,10 +353,10 @@ button.main-button:hover {
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Header
---------------------------------------------- 
+---------------------------------------------
 */
 .header-area {
   position: fixed;
@@ -618,10 +618,10 @@ Header
   }
 }
 
-/* 
+/*
 ---------------------------------------------
 Welcome
---------------------------------------------- 
+---------------------------------------------
 */
 .welcome-area {
   overflow: hidden;
@@ -632,7 +632,7 @@ Welcome
   background-image: url(../images/banner-bg.png);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: cover; 
+  background-size: cover;
   height: 100vh;
 }
 
@@ -741,10 +741,10 @@ button {
 }
 
 
-/* 
+/*
 ---------------------------------------------
 Description
---------------------------------------------- 
+---------------------------------------------
 */
 .description-small-item {
   cursor: pointer;
@@ -831,10 +831,10 @@ Description
   }
 }
 
-/* 
+/*
 ---------------------------------------------
 Members
---------------------------------------------- 
+---------------------------------------------
 */
 
 .members {
@@ -885,7 +885,7 @@ Members
   overflow: hidden;
   /* -webkit-border-radius: 100px;
   -moz-border-radius: 100px;*/
-  border-radius: 7px; 
+  border-radius: 7px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -1029,10 +1029,10 @@ Members
   transform: rotate(180deg);
 }
 
-/* 
+/*
 ---------------------------------------------
 Work Area
---------------------------------------------- 
+---------------------------------------------
 */
 * {box-sizing:border-box}
 
@@ -1129,10 +1129,10 @@ Work Area
   to {opacity: 1}
 }
 
-/* 
+/*
 ---------------------------------------------
 Footer
---------------------------------------------- 
+---------------------------------------------
 */
 footer {
   background-image: linear-gradient(127deg, #a759d1 0%, #8261ee 91%);
@@ -1198,10 +1198,10 @@ footer .copyright {
   }
 }
 
-/* 
+/*
 ---------------------------------------------
 Preloader
---------------------------------------------- 
+---------------------------------------------
 */
 #preloader {
   overflow: hidden;
@@ -1282,10 +1282,10 @@ Preloader
   }
 }
 
-/* 
+/*
 ---------------------------------------------
 Requirement: Banner
---------------------------------------------- 
+---------------------------------------------
 */
 
 #req-banner {
@@ -1348,10 +1348,18 @@ Requirement: Banner
 
 .tasks .task-card .task-details .list ul #more-1-1,
 .tasks .task-card .task-details .list ul #more-1-2,
+.tasks .task-card .task-details .list ul #more-1-3,
+.tasks .task-card .task-details .list ul #more-1-4,
 .tasks .task-card .task-details .list ul #more-2-1,
 .tasks .task-card .task-details .list ul #more-2-2,
+.tasks .task-card .task-details .list ul #more-2-3,
+.tasks .task-card .task-details .list ul #more-2-4,
+.tasks .task-card .task-details .list ul #more-2-5,
 .tasks .task-card .task-details .list ul #more-3-1,
 .tasks .task-card .task-details .list ul #more-3-2,
+.tasks .task-card .task-details .list ul #more-3-3,
+.tasks .task-card .task-details .list ul #more-3-4,
+.tasks .task-card .task-details .list ul #more-3-5,
 .tasks .task-card .task-details .list ul #more-4-1,
 .tasks .task-card .task-details .list ul #more-4-2,
 .tasks .task-card .task-details .list ul #more-5-1,
@@ -1373,17 +1381,17 @@ Requirement: Banner
 }
 
 .modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 100px; 
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.9); 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.9);
   justify-content: center;
 }
 
