--- a/assets/css/order-fulfillment.css
+++ b/assets/css/order-fulfillment.css
@@ -1423,3 +1423,78 @@ Requirement: Banner
   transform: translateY(-53%);
   width: 15px;
 }
+
+
+/* Mixins */
+
+
+
+/* Styling */
+
+.general-font {
+	font-family: 'PT Serif', sans-serif;
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.87);
+	// Remove comment below to see the basegrid alignment
+	// @include baseline(8);
+}
+
+.entry-title {
+	font-family: 'Playfair Display', sans-serif;
+	margin: 1px 0 0;
+}
+
+.entry-subtitle {
+	font-weight:400;
+	line-height:40px;
+	margin:25px 0 0;
+}
+
+article p {
+	font-size: 16px;
+	line-height: 24px;
+}
+
+article p > em {
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 14px;
+	font-weight: 700;
+	font-style: normal;
+	text-transform:uppercase;
+}
+
+.post {
+	padding: 24px;
+}
+
+.entry-header {
+	text-align:center;
+
+}
+
+.entry-meta {
+	font-family: 'Roboto Condensed', sans-serif;
+	text-transform: uppercase;
+	font-size:14px;
+	margin-top: 18px;
+	margin-bottom: 32px;
+}
+
+.entry-content {
+	width: 90%;
+	margin: 0 auto;
+	tab-size: 8;
+	text-align: justify;
+
+}
+
+.entry-content p {
+	margin-top: 0;
+	margin-bottom: 24px;
+}
+
+.entry-content img {
+	width: 100%;
+	margin-top: 0;
+	margin-bottom: 24px;
+}
